#3 fix: buttons spacing

--- a/gtdmanager/static/gtdmanager/css/main.css
+++ b/gtdmanager/static/gtdmanager/css/main.css
@@ -24,3 +24,7 @@ form {
 }
 
 div.inline > h2, a, btn { display: inline; }
+
+.btn-table {
+    margin-right: 4px;
+}
